data/errors/cordova-plugin-cszbar-cordova-android-11.txt
- Generating browser application bundles (phase: setup)...
✔ Browser application bundle generation complete.
✔ Browser application bundle generation complete.
- Copying assets...
✔ Copying assets complete.
- Generating index html...
✔ Index html generation complete.
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
/Users/damian/Sample Code/plugin-explorer/apps/cordova/platforms/android/app/src/main/java/org/cloudsky/cordovaPlugins/ZBarScannerActivity.java:20: error: cannot find symbol
import android.support.v4.app.ActivityCompat;
                             ^
  symbol:   class ActivityCompat
  location: package android.support.v4.app
/Users/damian/Sample Code/plugin-explorer/apps/cordova/platforms/android/app/src/main/java/org/cloudsky/cordovaPlugins/ZBarScannerActivity.java:21: error: package android.support.v4.content does not exist
import android.support.v4.content.ContextCompat;
                                 ^
/Users/damian/Sample Code/plugin-explorer/apps/cordova/platforms/android/app/src/main/java/org/cloudsky/cordovaPlugins/ZBarScannerActivity.java:94: error: cannot find symbol
        int permissionCheck = ContextCompat.checkSelfPermission(this.getBaseContext(), Manifest.permission.CAMERA);
                              ^
  symbol:   variable ContextCompat
  location: class ZBarScannerActivity
/Users/damian/Sample Code/plugin-explorer/apps/cordova/platforms/android/app/src/main/java/org/cloudsky/cordovaPlugins/ZBarScannerActivity.java:102: error: cannot find symbol
            ActivityCompat.requestPermissions(this,
            ^
  symbol:   variable ActivityCompat
  location: class ZBarScannerActivity
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
4 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileDebugJavaWithJavac'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 4s
Command failed with exit code 1: /Users/damian/Sample Code/plugin-explorer/apps/cordova/platforms/android/gradlew cdvBuildDebug -b /Users/damian/Sample Code/plugin-explorer/apps/cordova/platforms/android/build.gradle
[[40mERROR[49m] An error occurred while running subprocess cordova.
        
        cordova build android exited with exit code 1.
        
        Re-running this command with the --verbose flag may provide more information.
